--- a/index.html
+++ b/index.html
@@ -468,6 +468,11 @@
             <div class="app-icon-wrapper"><img src="img/tetris.svg" alt="Тетрис"></div>
             <div class="app-name-wrapper"><span class="app-name-text">Тетрис</span></div>
         </a>
+        <a href="?app=audiobookPlayer" class="app-item" style="--app-color: #7c3aed;" data-name="Проигрыватель аудиокниг" data-module="audiobookPlayer">
+    <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+    <div class="app-icon-wrapper"><img src="img/audiobookPlayer.svg" alt="Проигрыватель аудиокниг"></div>
+    <div class="app-name-wrapper"><span class="app-name-text">Проигрыватель аудиокниг</span></div>
+</a>
     </template>
 </body>
 </html>
