--- a/index.html
+++ b/index.html
@@ -473,6 +473,11 @@
     <div class="app-icon-wrapper"><img src="img/audiobookPlayer.svg" alt="Проигрыватель аудиокниг"></div>
     <div class="app-name-wrapper"><span class="app-name-text">Проигрыватель аудиокниг</span></div>
 </a>
+        <a href="?app=pomodoroTimer" class="app-item" style="--app-color: #ef4444;" data-name="Pomodoro-таймер" data-module="pomodoroTimer">
+    <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+    <div class="app-icon-wrapper"><img src="img/pomodoroTimer.svg" alt="Pomodoro-таймер"></div>
+    <div class="app-name-wrapper"><span class="app-name-text">Pomodoro-таймер</span></div>
+</a>
     </template>
 </body>
 </html>
