--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
             <div class="app-icon-wrapper"><img src="img/soundAndMicTest.svg" alt="Тест звука и микрофона"></div>
             <div class="app-name-wrapper"><span class="app-name-text">Тест звука и микрофона</span></div>
         </a>
-        <a href="?app=audioCompressor" class="app-item" style="--app-color: #3b82f6;" data-name="Сжатие аудио" data-module="audioCompressor">
-            <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
-            <div class="app-icon-wrapper"><img src="img/audioCompressor.svg" alt="Сжатие аудио"></div>
-            <div class="app-name-wrapper"><span class="app-name-text">Сжатие аудио</span></div>
+        <a href="?app=audioEditor" class="app-item" style="--app-color: #3b82f6;" data-name="Редактор аудио" data-module="audioEditor">
+    <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+    <div class="app-icon-wrapper"><img src="img/audioCompressor.svg" alt="Редактор аудио"></div>
+    <div class="app-name-wrapper"><span class="app-name-text">Редактор аудио</span></div>
         </a>
         <a href="?app=myIp" class="app-item" style="--app-color: #6b7280;" data-name="Мой IP" data-module="myIp">
             <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
