--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </a>
         <a href="?app=audioEditor" class="app-item" style="--app-color: #3b82f6;" data-name="Редактор аудио" data-module="audioEditor">
     <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
-    <div class="app-icon-wrapper"><img src="img/audioCompressor.svg" alt="Редактор аудио"></div>
+    <div class="app-icon-wrapper"><img src="img/audioEditor.svg" alt="Редактор аудио"></div>
     <div class="app-name-wrapper"><span class="app-name-text">Редактор аудио</span></div>
         </a>
         <a href="?app=myIp" class="app-item" style="--app-color: #6b7280;" data-name="Мой IP" data-module="myIp">
