--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script src="js/utils/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <script src="js/utils/qrcode.min.js"></script>
     <script src="js/utils/jszip.min.js"></script>
+    <script src="js/utils/chart.js"></script>
     
     <!-- Библиотека для сортировки -->
     <script src="js/utils/Sortable.min.js"></script>
