--- a/index.html
+++ b/index.html
@@ -473,12 +473,17 @@
     <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
     <div class="app-icon-wrapper"><img src="img/audiobookPlayer.svg" alt="Проигрыватель аудиокниг"></div>
     <div class="app-name-wrapper"><span class="app-name-text">Проигрыватель аудиокниг</span></div>
-</a>
+        </a>
         <a href="?app=pomodoroTimer" class="app-item" style="--app-color: #ef4444;" data-name="Pomodoro-таймер" data-module="pomodoroTimer">
     <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
     <div class="app-icon-wrapper"><img src="img/pomodoroTimer.svg" alt="Pomodoro-таймер"></div>
     <div class="app-name-wrapper"><span class="app-name-text">Pomodoro-таймер</span></div>
-</a>
+       </a>
+       <a href="?app=base64Converter" class="app-item" style="--app-color: #4f46e5;" data-name="Кодировщик Base64" data-module="base64Converter">
+            <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+            <div class="app-icon-wrapper"><img src="img/base64Converter.svg" alt="Кодировщик Base64"></div>
+            <div class="app-name-wrapper"><span class="app-name-text">Кодировщик Base64</span></div>
+        </a>
     </template>
 </body>
 </html>
