--- a/offline.html
+++ b/offline.html
@@ -131,6 +131,7 @@
                 'Виртуальный кубик': 'virtualDice',
                 'Калькулятор калорий': 'calorieCalculator',
                 'Калькулятор': 'calculator',
+                'Кодировщик Base64': 'base64Converter',
             };
             
             const onlineOnlyApps = ['speedTest', 'radio', 'myIp', 'currencyCalculator', 'notesAndTasks'];
