--- a/index.html
+++ b/index.html
@@ -484,6 +484,11 @@
             <div class="app-icon-wrapper"><img src="img/base64Converter.svg" alt="Кодировщик Base64"></div>
             <div class="app-name-wrapper"><span class="app-name-text">Кодировщик Base64</span></div>
         </a>
+        <a href="?app=periodicTable" class="app-item" style="--app-color: #0d9488;" data-name="Таблица Менделеева" data-module="periodicTable">
+            <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+            <div class="app-icon-wrapper"><img src="img/periodicTable.svg" alt="Таблица Менделеева"></div>
+            <div class="app-name-wrapper"><span class="app-name-text">Таблица Менделеева</span></div>
+        </a>
     </template>
 </body>
 </html>
