--- a/offline.html
+++ b/offline.html
@@ -132,6 +132,7 @@
                 'Калькулятор калорий': 'calorieCalculator',
                 'Калькулятор': 'calculator',
                 'Кодировщик Base64': 'base64Converter',
+                'Морской бой': 'battleship',
             };
             
             const onlineOnlyApps = ['speedTest', 'radio', 'myIp', 'currencyCalculator', 'notesAndTasks'];
