--- a/index.html
+++ b/index.html
@@ -494,6 +494,11 @@
             <div class="app-icon-wrapper"><img src="img/battleship.svg" alt="Морской бой"></div>
             <div class="app-name-wrapper"><span class="app-name-text">Морской бой</span></div>
         </a>
+        <a href="?app=metronome" class="app-item" style="--app-color: #475569;" data-name="Простой метроном" data-module="metronome">
+        <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+        <div class="app-icon-wrapper"><img src="img/metronome.svg" alt="Простой метроном"></div>
+        <div class="app-name-wrapper"><span class="app-name-text">Простой метроном</span></div>
+    </a>
     </template>
 </body>
 </html>
