--- a/offline.html
+++ b/offline.html
@@ -125,6 +125,7 @@
                 'Flappy Bird': 'flappyBird',
                 'Markdown Редактор': 'markdownEditor',
                 'Тетрис': 'tetris',
+                'Метроном': 'metronome',
                 // Приложения, требующие онлайн
                 'Скорость интернета': 'speedTest', 'Радио': 'radio', 'Мой IP': 'myIp', 'Калькулятор валют': 'currencyCalculator',
                 'Заметки и задачи': 'notesAndTasks',
