--- a/index.html
+++ b/index.html
@@ -100,13 +100,7 @@
                 <svg class="absolute left-3 top-1/2 -translate-y-1/2 h-5 w-5 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
             </div>
             
-            <div id="sidebar-filter-container" class="flex flex-wrap justify-center items-center gap-2 mb-4">
-                 <button data-sort="my-apps" class="filter-btn hidden">Мои приложения</button>
-                 <button data-sort="all" class="filter-btn active">Все</button>
-                 <button data-sort="popular" class="filter-btn">Популярные</button>
-                 <button data-sort="new" class="filter-btn">Новые</button>
-            </div>
-
+            <!-- Контейнер для аккордеона с категориями. Будет заполнен через JS -->
             <nav id="sidebar-app-list" class="flex-grow overflow-y-auto space-y-2 pr-2"></nav>
             
             <div class="mt-auto pt-4 border-t border-slate-200/50 dark:border-slate-700/50">
