--- a/index.html
+++ b/index.html
@@ -495,6 +495,11 @@
         <div class="app-icon-wrapper"><img src="img/metronome.svg" alt="Метроном"></div>
         <div class="app-name-wrapper"><span class="app-name-text">Метроном</span></div>
     </a>
+        <a href="?app=rhymeGenerator" class="app-item" style="--app-color: #ec4899;" data-name="Генератор рифм" data-module="rhymeGenerator">
+    <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+    <div class="app-icon-wrapper"><img src="img/rhymeGenerator.svg" alt="Генератор рифм"></div>
+    <div class="app-name-wrapper"><span class="app-name-text">Генератор рифм</span></div>
+</a>
     </template>
 </body>
 </html>
