--- a/offline.html
+++ b/offline.html
@@ -126,7 +126,7 @@
                 'Markdown Редактор': 'markdownEditor',
                 'Тетрис': 'tetris',
                 'Метроном': 'metronome',
-                'Генератор рифм': 'rhymeGenerator', // <-- ДОБАВЛЕНО НОВОЕ ПРИЛОЖЕНИЕ
+                'Трекер привычек': 'habitTracker',
                 // Приложения, требующие онлайн
                 'Скорость интернета': 'speedTest', 'Радио': 'radio', 'Мой IP': 'myIp', 'Калькулятор валют': 'currencyCalculator',
                 'Заметки и задачи': 'notesAndTasks',
