--- a/offline.html
+++ b/offline.html
@@ -127,6 +127,7 @@
                 'Тетрис': 'tetris',
                 'Метроном': 'metronome',
                 'Трекер привычек': 'habitTracker',
+                'Форматировщик JSON': 'jsonFormatter',
                 // Приложения, требующие онлайн
                 'Скорость интернета': 'speedTest', 'Радио': 'radio', 'Мой IP': 'myIp', 'Калькулятор валют': 'currencyCalculator',
                 'Заметки и задачи': 'notesAndTasks',
