--- a/index.html
+++ b/index.html
@@ -505,6 +505,11 @@
             <div class="app-icon-wrapper"><img src="img/jsonFormatter.svg" alt="Форматировщик JSON"></div>
             <div class="app-name-wrapper"><span class="app-name-text">Форматировщик JSON</span></div>
         </a>
+        <a href="?app=solitaire" class="app-item" style="--app-color: #16a34a;" data-name="Пасьянс «Косынка»" data-module="solitaire">
+        <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+        <div class="app-icon-wrapper"><img src="img/solitaire.svg" alt="Пасьянс «Косынка»"></div>
+        <div class="app-name-wrapper"><span class="app-name-text">Пасьянс «Косынка»</span></div>
+    </a>
     </template>
 </body>
 </html>
