--- a/offline.html
+++ b/offline.html
@@ -128,6 +128,7 @@
                 'Метроном': 'metronome',
                 'Трекер привычек': 'habitTracker',
                 'Форматировщик JSON': 'jsonFormatter',
+                'Пасьянс «Косынка»': 'solitaire',
                 // Приложения, требующие онлайн
                 'Скорость интернета': 'speedTest', 'Радио': 'radio', 'Мой IP': 'myIp', 'Калькулятор валют': 'currencyCalculator',
                 'Заметки и задачи': 'notesAndTasks',
