--- a/index.html
+++ b/index.html
@@ -510,6 +510,11 @@
         <div class="app-icon-wrapper"><img src="img/solitaire.svg" alt="Пасьянс «Косынка»"></div>
         <div class="app-name-wrapper"><span class="app-name-text">Пасьянс «Косынка»</span></div>
     </a>
+        <a href="?app=mahjongSolitaire" class="app-item" style="--app-color: #0d9488;" data-name="Пасьянс Маджонг" data-module="mahjongSolitaire">
+        <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+        <div class="app-icon-wrapper"><img src="img/mahjongSolitaire.svg" alt="Пасьянс Маджонг"></div>
+        <div class="app-name-wrapper"><span class="app-name-text">Пасьянс Маджонг</span></div>
+    </a>
     </template>
 </body>
 </html>
