--- a/offline.html
+++ b/offline.html
@@ -129,6 +129,7 @@
                 'Трекер привычек': 'habitTracker',
                 'Форматировщик JSON': 'jsonFormatter',
                 'Пасьянс «Косынка»': 'solitaire',
+                'Пасьянс Маджонг': 'mahjongSolitaire',
                 // Приложения, требующие онлайн
                 'Скорость интернета': 'speedTest', 'Радио': 'radio', 'Мой IP': 'myIp', 'Калькулятор валют': 'currencyCalculator',
                 'Заметки и задачи': 'notesAndTasks',
