--- a/index.html
+++ b/index.html
@@ -515,6 +515,11 @@
         <div class="app-icon-wrapper"><img src="img/mahjongSolitaire.svg" alt="Пасьянс Маджонг"></div>
         <div class="app-name-wrapper"><span class="app-name-text">Пасьянс Маджонг</span></div>
     </a>
+        <a href="?app=tabataTimer" class="app-item" style="--app-color: #f97316;" data-name="Табата-таймер" data-module="tabataTimer">
+            <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+            <div class="app-icon-wrapper"><img src="img/tabataTimer.svg" alt="Табата-таймер"></div>
+            <div class="app-name-wrapper"><span class="app-name-text">Табата-таймер</span></div>
+        </a>
     </template>
 </body>
 </html>
