--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     <script src="js/utils/qrcode.min.js"></script>
     <script src="js/utils/jszip.min.js"></script>
     <script src="js/utils/chart.js"></script>
+    <script src="js/utils/ebu-r128.js"></script>
+    <script src="js/utils/wavesurfer.js"></script>
     
     <!-- Библиотека для сортировки -->
     <script src="js/utils/Sortable.min.js"></script>
