--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script src="js/utils/chart.js"></script>
     <script src="js/utils/ebu-r128.js"></script>
     <script src="js/utils/wavesurfer.js"></script>
+    <script src="js/utils/regions.min.js"></script>
     
     <!-- Библиотека для сортировки -->
     <script src="js/utils/Sortable.min.js"></script>
