--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script src="js/utils/qrcode.min.js"></script>
     <script src="js/utils/jszip.min.js"></script>
     <script src="js/utils/chart.js"></script>
-    <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.12.10/dist/umd/ffmpeg.js"></script>
+    <script src="https://github.com/pxl2a11/pxl2a11.github.io/releases/download/v1.0.0-assets/ffmpeg.js"></script>
     <script src="js/utils/wavesurfer.js"></script>
     <script src="js/utils/regions.min.js"></script>
     
